data/all_generated_tests/raw_wast_tests/unreachable_MismanagementofBlockNesting_1264.wast
;; 5. **Test: Br_if Inside Nested Structures with Unreachable**    - **Description:** Implement nested `block` and `loop` structures with conditional branches (`br_if`) and an `unreachable` instruction within them. Add branches dependent on stack values provided by other instructions.    - **Constraint Checked:** Tests the interaction between stack-dependent branches and `unreachable` in nested contexts.    - **Relation to Mismanagement of Block Nesting:** Ensures that stack-based flow control handles nested block contexts and unreachable instructions correctly.

(assert_invalid
  (module (func $br_if_nested_unreachable
    (block (result i32)
      (block
        (loop
          (i32.const 1)
          (br_if 0)
          (unreachable)
        )
        (i32.const 1)
        (br 0)
      )
      (i32.const 1)
    )
  ))
  "type mismatch"
)